addressing writefull comments in chapter 4

--- a/thesis/03-nonautoregressive.tex
+++ b/thesis/03-nonautoregressive.tex
@@ -441,7 +441,7 @@ during decoding, the authors choose a similar approach to
 \citet{libovicky-helcl-2018-end} and initialize the decoder input length with
 the source length multiplied by a factor of $\lambda$, which they estimate
 empirically from the data. We present this approach in detail in Chapter
-\ref{sec:nar-nmt-ctc}.
+\ref{chap:nar-nmt-ctc}.
 
 In the experiments described in Chapter \ref{chap:nar-nmt-ctc}, we use the
 \ac{ctc} loss, which is similar to this approach. Instead of considering the
