--- a/thesis/05-experiments.tex
+++ b/thesis/05-experiments.tex
@@ -45,11 +45,11 @@ continue to achieve superior results over \ac{nar} models.
 \label{sec:exp:teachers}
 % ------------------------------------------------------------------------------
 
-\paperdisclaim{This section is based on ``The University of Edinburgh's
-  English-German and English-Hausa Submissions to the WMT21 News Translation
-  Task'', joint work with Pinzen Chen, Ulrich Germann, Laurie Burchell, Nikolay
-  Bogoychev, Antonio Valerio Miceli Barone, Jonas Waldendorf, Alexandra Birch,
-  and Kenneth Heafield, published at WMT 2021.}
+\paperdisclaim{This section is based on the paper \emph{``The University of
+    Edinburgh's English-German and English-Hausa Submissions to the WMT21 News
+    Translation Task''}, joint work with Pinzen Chen, Ulrich Germann, Laurie
+  Burchell, Nikolay Bogoychev, Antonio Valerio Miceli Barone, Jonas Waldendorf,
+  Alexandra Birch, and Kenneth Heafield, published at WMT 2021.}
 
 \noindent
 In this section, we describe the experimental settings for training the \ac{ar}
